--- a/sass/partials/_cards.scss
+++ b/sass/partials/_cards.scss
@@ -1,9 +1,3 @@
-// .card {
-//   height: 400px;
-//   width: 300px;
-//   border-radius: 0;
-//   padding: 0;
-// }
-
-.featured-container {
+.card {
+  padding: 0;
 }
