--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,7 +1,88 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Raleway:wght@200;400;500;700&display=swap");
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: "Cabin";
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.navbar-brand {
+  font-family: "Raleway";
+}
+
+header {
+  background-color: black;
+  color: white;
+}
+
+.nav-link {
+  color: white;
+}
+
+nav i {
+  color: white;
+}
+.cart-counter {
+  color: red;
+}
+
+.wrapper {
+  flex: 1 0 auto;
+  margin-bottom: 25px;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  flex-shrink: 0;
+  height: 100px;
+}
+
+.container-fluid {
+  max-width: 1480px;
+}
+
 .banner {
   width: 100%;
   height: 300px;
   background-size: cover;
   text-align: center;
   color: white;
+}
+
+.card {
+  margin: auto;
+  max-width: 90%;
+}
+
+.btn-user {
+  color: white;
+}
+
+.message {
+  margin: auto;
+  padding: 10px;
+  border: solid 1px black;
+}
+
+.error {
+  background-color: rgba(255, 0, 0, 0.219);
+  border: solid 2px red;
+  color: red;
+}
+
+.success {
+  background-color: rgba(0, 255, 0, 0.219);
+  border: solid 2px green;
+  color: green;
+}
+
+.spinner-grow {
+  margin: auto;
 }
