--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Raleway:wght@200;400;500;700&display=swap");
-
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "partials/layout";
 @import "partials/cards";
 @import "partials/forms";
+@import "partials/edit";
+@import "partials/watches";
+@import "partials/cart";
