--- a/css/style.css
+++ b/css/style.css
@@ -10928,6 +10928,10 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Cabin";
+  background-image: radial-gradient(#fefefe 2px, transparent 2px), radial-gradient(#fefefe 2px, transparent 2px);
+  background-size: 10px 10px;
+  background-position: 0 0, 5px 5px;
+  background-color: #dbdbdb;
 }
 
 h1, .h1,
@@ -11019,6 +11023,10 @@ footer {
 
 .card {
   padding: 0;
+}
+
+.card .fa {
+  font-size: 1.5rem;
 }
 
 .input-group {
