--- a/css/style.css
+++ b/css/style.css
@@ -10960,6 +10960,9 @@ header {
 
 nav i {
   color: white;
+  border: solid 1px white;
+  border-radius: 50%;
+  padding: 7px;
 }
 
 .cart-counter {
@@ -11046,7 +11049,8 @@ footer {
 }
 
 .login-container,
-.user-container {
+.user-container,
+.margin-top {
   margin-top: 25px;
   padding: 30px;
 }
