Adding fakeshop api placeholder

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -87,6 +87,10 @@ footer {
   color: white;
 }
 
+.hero-img {
+  background-image: url("/images/carousel-2.jpg") !important;
+}
+
 .card {
   margin: auto;
   max-width: 90%;
