--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -85,10 +85,7 @@ footer {
   background-size: cover;
   text-align: center;
   color: white;
-}
-
-.hero-img {
-  background-image: url("/images/carousel-2.jpg") !important;
+  object-fit: cover;
 }
 
 .card {
